feat: household creation

--- a/Application/Frigorino.Application/Frigorino.Application.csproj
+++ b/Application/Frigorino.Application/Frigorino.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Frigorino.Domain\Frigorino.Domain.csproj" />
+    <ProjectReference Include="..\Frigorino.Infrastructure\Frigorino.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
