--- a/Application/Frigorino.Web/ClientApp/package.json
+++ b/Application/Frigorino.Web/ClientApp/package.json
@@ -8,7 +8,7 @@
         "start": "vite",
         "build": "tsc -b && vite build",
         "preview": "vite preview",
-        "api": "npx openapi-typescript-codegen -i http://localhost:5000/swagger/v1/swagger.json -o ./src/lib/api --client fetch --useUnionTypes --name FrigorinoApiClient",
+        "api": "npx openapi-typescript-codegen -i ./src/lib/swagger.json -o ./src/lib/api --client fetch --useUnionTypes --name FrigorinoApiClient",
         "lint": "eslint .",
         "prettier": "prettier --write .",
         "fix": "eslint . --fix && prettier --write ."
@@ -18,6 +18,7 @@
         "@emotion/styled": "^11.14.1",
         "@mui/icons-material": "^7.2.0",
         "@mui/material": "^7.2.0",
+        "@tanstack/react-query": "^5.83.0",
         "@tanstack/react-router": "^1.128.8",
         "@tanstack/react-router-devtools": "^1.128.8",
         "firebase": "^12.0.0",
