--- a/Application/Frigorino.Web/ClientApp/package.json
+++ b/Application/Frigorino.Web/ClientApp/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "start": "vite",
+        "start": "vite --host",
         "build": "tsc -b && vite build",
         "preview": "vite preview",
         "api": "npx openapi-typescript-codegen -i ./src/lib/swagger.json -o ./src/lib/api --client fetch --useUnionTypes --name FrigorinoApiClient",
