--- a/Application/Frigorino.Web/ClientApp/package.json
+++ b/Application/Frigorino.Web/ClientApp/package.json
@@ -27,6 +27,7 @@
         "firebase": "^12.0.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-window": "^1.8.11",
         "zustand": "^5.0.6"
     },
     "devDependencies": {
@@ -35,6 +36,7 @@
         "@types/node": "^22",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
+        "@types/react-window": "^1.8.8",
         "@vitejs/plugin-react": "^4.6.0",
         "eslint": "^9.30.1",
         "eslint-config-prettier": "^10.1.8",
