feat: maintenance tasks

--- a/Application/Frigorino.Web/ClientApp/package.json
+++ b/Application/Frigorino.Web/ClientApp/package.json
@@ -11,7 +11,8 @@
         "api": "npx openapi-typescript-codegen -i ./src/lib/swagger.json -o ./src/lib/api --client fetch --useUnionTypes --name FrigorinoApiClient",
         "lint": "eslint .",
         "prettier": "prettier --write .",
-        "fix": "eslint . --fix && prettier --write ."
+        "fix": "eslint . --fix && prettier --write .",
+        "sql": "docker run -p 8080:80 -e \"PGADMIN_DEFAULT_EMAIL=test@test.de\" -e \"PGADMIN_DEFAULT_PASSWORD=test\" -v pgadmin-data:/var/lib/pgadmin --name pgadmin -d dpage/pgadmin4"
     },
     "dependencies": {
         "@dnd-kit/core": "^6.3.1",
