--- a/Application/Frigorino.Web/ClientApp/package.json
+++ b/Application/Frigorino.Web/ClientApp/package.json
@@ -26,8 +26,12 @@
         "@tanstack/react-router": "^1.128.8",
         "@tanstack/react-router-devtools": "^1.128.8",
         "firebase": "^12.0.0",
+        "i18next": "^25.4.2",
+        "i18next-browser-languagedetector": "^8.2.0",
+        "i18next-http-backend": "^3.0.2",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-i18next": "^15.7.2",
         "react-window": "^1.8.11",
         "zustand": "^5.0.6"
     },
