--- a/Application/Frigorino.Web/ClientApp/package.json
+++ b/Application/Frigorino.Web/ClientApp/package.json
@@ -33,6 +33,7 @@
         "react-dom": "^19.1.0",
         "react-i18next": "^15.7.2",
         "react-window": "^1.8.11",
+        "sonner": "^2.0.7",
         "zustand": "^5.0.6"
     },
     "devDependencies": {
